# pyvttt

./: .gitignore  README.md  pyproject.toml  setup.py
pyvttt/: __init__.py  __main__.py  pyvttt.py
pyvttt/models/: device.py  language.py
pyvttt/services/: abstract_model_service.py  content_downloader.py  summarizer.py  transcriber.py  translator.py
pyvttt/shared/utils/: logger.py
