[tool.poetry]
name = "pyvttt"
version = "0.1.0"
description = "Python Video-to-Text Transcriber"
authors = ["ZappaBoy <federico.zappone@justanother.cloud>"]
maintainers = ["ZappaBoy <federico.zappone@justanother.cloud>"]
readme = "README.md"
packages = [{ include = "pyvttt" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.4.2"
pytube = "^15.0.0"
openai-whisper = "^20231117"

# Uncomment the following lines to use the pre-built rocm wheels for torch and torchvision
# torch = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.0/torch-2.1.1%2Brocm6.0-cp311-cp311-linux_x86_64.whl"}
# torchvision = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.0/torchvision-0.16.1%2Brocm6.0-cp311-cp311-linux_x86_64.whl" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
poetry2setup = "^1.1.0"
pytest-env = "^0.8.1"

[tool.pytest.ini_options]
addopts = "-s -v"
pythonpath = [
    "pyvttt"
]
env = [
    "ENVIRONMENT=testing",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
pyvttt = "pyvttt:main"